--- a/pages/Cardinal/web-components-mvc.html
+++ b/pages/Cardinal/web-components-mvc.html
@@ -6,7 +6,7 @@
 <psk-chapter title="We bet on Web Components">
 <p align="justify">For security reasons (minimizing the SSApp code), as well as to accelerate development, we chose to build Cardinal on the Web Component standard.</p>
 <p align="justify">The HTML programming model provided by the web-components technology enables the possibility to create your own tags as reusable components. The first obvious application of web-components in the PrivateSky ecosystem is the very page you are looking at (privatesky.xyz) because the entire site runs on CardinalIJS and the components it provides. In order to easily describe and publish this paper we opted to employ our own proprietary technology.</p>
-<psk-chapter>
+</psk-chapter>
 
 <psk-chapter title="Between MVC and MVVM">
 <p align="justify">Cardinal provides a mature and robust programming framework based on MVC and MVVM.</p>
