--- a/pages/Development/encrypted-choreographies.html
+++ b/pages/Development/encrypted-choreographies.html
@@ -1,12 +1,11 @@
 <psk-page title="SecurityContext: Encryption in PrivateSky for encrypted choreographies">
   <psk-chapter title="Concepts">
     We proposed the concept of encrypted choreographies as a method to make easy to use cryptography methods with swarms communication.
-
+    <p>Understanding  encrypted choreographies is PrivateSky there are the following concepts:</p>
     <ul>
-      Understanding  encrypted choreographies is PrivateSky there are the following concepts:
       <li> SecurityContext is a global variable in $$.SecurityContext offering encryption functionality as part of the swarm execution engine
-
-          <ul> The list of functions offered by SecurityContext is:
+          <p>The list of functions offered by SecurityContext is:</p>
+          <ul> 
             <li>
               getCurrentAgentIdentity(): returns an agent identity  (the main identity in the current Security Context)
             </li>
