--- a/pages/EDFS/edfs.html
+++ b/pages/EDFS/edfs.html
@@ -44,8 +44,8 @@
 
 <p align="justify">The BAR (or CSB) identification using SEED enables:</p>
 <ul>
-<il>• Saving and recovering encrypted data in cloud with ease</il>
-<il>• Very fast BAR archives sharing between the users. The speed is due to the fact that only the SEED must be shared, not the entire BAR content</il>
+<li> Saving and recovering encrypted data in cloud with ease</li>
+<li> Very fast BAR archives sharing between the users. The speed is due to the fact that only the SEED must be shared, not the entire BAR content</li>
 </ul>
 
 </psk-chapter>
