--- a/pages/psk-wiki/psk-page.html
+++ b/pages/psk-wiki/psk-page.html
@@ -11,10 +11,10 @@
         <span><code>Psk-page</code> listens to all the <code>psk-send-chapter</code> events sent by the <psk-link
                 page="psk-wiki/psk-chapter">psk-chapter</psk-link>.</span>
         <p>For every event sent the hierarchy of chapters there are two possible situations:</p>
-        <li>
-            <ul>The hierarchy is not instantiated and therefore it will be created.</ul>
-            <ul>If it exists then it will be updated </ul>
-        </li>
+        <ul>
+            <li>The hierarchy is not instantiated and therefore it will be created.</li>
+            <li>If it exists then it will be updated </li>
+        </ul>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
