psk-toc update on pages

--- a/pages/About/about.html
+++ b/pages/About/about.html
@@ -1,9 +1,9 @@
 <psk-page title="PrivateSky  Open Source Platform">
-    
-    <psk-chapter>
+    <psk-toc title="About"></psk-toc>
+    <psk-description>
     PrivateSky open source code was obtained from a research project coordinated by Alexandru Ioan Cuza University from Iasi in collaborations with the following companies: Axiologic Research (original code contributor), Heaven Solutions, Romsoft, Code932, DPO, Space Giant, Junio.
     All the code in PrivateSky is licensed as Open Source code. The copyright belongs to the original authors: persons or companies but everything that is published under <a href="https://github.com/PrivateSky">PrivateSky Github repositories</a> is licensed as MIT and LPGPL.
-    </psk-chapter>
+    </psk-description>
         
     <psk-img src="/pages/PrivateSky/PrivateSky.png"></psk-img>
 
