--- a/pages/About/how-to-write-documentation-pages.html
+++ b/pages/About/how-to-write-documentation-pages.html
@@ -1,5 +1,9 @@
 <psk-page title="How to Write a page on this site">
-  This  page is short guide for  PrivateSky developers, technical writers, external parteners and intribut contributors
+  <psk-toc title= "Writing documentation pages"></psk-toc>
+  <psk-description>
+    This  page is short guide for  PrivateSky developers, technical writers, external parteners and intribut contributors
+  </psk-description>
+  
   <psk-chapter title="Each page is a simple html writen with a semantic markup defined with web components ">
 
   </psk-chapter>
@@ -18,41 +22,35 @@
       Starts a page, this tag is required
     </psk-chapter>
 
-    <psk-chapter psk-title="psk-chapter">
+    <psk-chapter title="psk-chapter">
       Introduce  a chapter or sub-chapter
     </psk-chapter>
 
-    <psk-chapter psk-title="psk-image" >
+    <psk-chapter title="psk-image" >
       Display an image
     </psk-chapter>
 
-
-    <psk-chapter psk-title="psk-toc">
+    <psk-chapter title="psk-toc">
         Automatically creates a Table of Content for current page
     </psk-chapter>
 
-    <psk-chapter psk-title="psk-card">
+    <psk-chapter title="psk-card">
         Display a card
     </psk-chapter>
 
   </psk-chapter>
 
-  <psk-chapter psk-title="Other html5 tags">
+  <psk-chapter title="Other html5 tags">
     bold, link,
   </psk-chapter>
 
-
-  <psk-chapter psk-title="Available icons in font">
+  <psk-chapter title="Available icons in font">
     What icons can be used in menus:
   </psk-chapter>
 
-
-
-  <psk-chapter psk-title="About web-components">
+  <psk-chapter title="About web-components">
     <div class='app-home'>
       <h1> Web Components</h1>
-
-
       <div class="card-body">
         Web Components are a set of features that provide a standard component model for the Web allowing for encapsulation and interoperability of individual HTML elements.
 
