--- a/pages/Development/annotation-engine.html
+++ b/pages/Development/annotation-engine.html
@@ -1,5 +1,5 @@
 <psk-page title="Advanced topics">
-    <psk-toc></psk-toc>
+    <psk-toc title="Annotation engine"></psk-toc>
 
   <psk-chapter title="Annotations and aspect-oriented programming">
   	<p align="justify"><b>Aspect-oriented programming (AOP)</b> is a programming paradigm that extends modularization due to the fact that it allows the separation of deep cross-cutting relationships into orthogonal aspects of behaviors. Traditional modules encapsulate participants (actors) and contain the code necessary for them to implement system services. Aspect-oriented programming modules contain the code required to implement a single service of the system, taking into account all possible actors. In other words, the aspect-oriented modules cross-cut the usage methods. The UAIC team, together with DPO researchers, is investigating ways to apply AOP for programming swarm-type executable choreographies.</p>
