--- a/pages/PrivateSky/main-innovations.html
+++ b/pages/PrivateSky/main-innovations.html
@@ -1,5 +1,5 @@
 <psk-page title="PrivateSky Innovations">
-    <psk-toc></psk-toc>
+    <psk-toc title="PrivateSky Innovations"></psk-toc>
 
   <psk-chapter title="Swarm Communication ">
 
