--- a/pages/psk-wiki/psk-chapter.html
+++ b/pages/psk-wiki/psk-chapter.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-chapter">
 
-    <psk-toc title="PSK Chapter - TOC">
+    <psk-toc title="PSK Chapter">
     </psk-toc>
 
     <psk-description>
