--- a/pages/psk-wiki/psk-code.html
+++ b/pages/psk-wiki/psk-code.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-code">
 
-    <psk-toc title="PSK Code - TOC">
+    <psk-toc title="PSK Code">
     </psk-toc>
 
     <psk-description>
