--- a/pages/psk-wiki/psk-list.html
+++ b/pages/psk-wiki/psk-list.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-list">
 
-    <psk-toc title="PSK List - TOC">
+    <psk-toc title="PSK List">
     </psk-toc>
 
     <psk-description>
