--- a/pages/psk-wiki/psk-page.html
+++ b/pages/psk-wiki/psk-page.html
@@ -1,7 +1,6 @@
 <psk-page title="psk-page">
 
-    <psk-toc title="PSK Page - TOC">
-    </psk-toc>
+    <psk-toc title="PSK Page"></psk-toc>
 
     <psk-description>
         <p>This component is the most important component for documentation as it renders the entire page.</p>
@@ -24,16 +23,14 @@
 
     <psk-chapter title="HTML Children">
         <p>If the loading has finished then the information between the two tags will be rendered on the UI in a slot
-            child.
-        </p>
+            child.</p>
     </psk-chapter>
 
     <psk-chapter title="Code Example">
         <psk-code>
-            <psk-page title="PSK-page Example">
-            </psk-page>
+            <psk-page title="PSK-page Example"></psk-page>
         </psk-code>
-    </psk-chapter>
+
     <psk-example title="Live Example">
         <psk-page title="PSK-page Example">
             <p>Despite seeming like a timeless character, the tooth fairy is a recent invention. The first written
@@ -46,4 +43,5 @@
             </psk-description>
         </psk-page>
     </psk-example>
+</psk-chapter>
 </psk-page>
