--- a/pages/psk-wiki/psk-table.html
+++ b/pages/psk-wiki/psk-table.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-table">
 
-    <psk-toc title="PSK Table - TOC">
+    <psk-toc title="PSK Table">
     </psk-toc>
 
     <psk-description>
