--- a/pages/web-components/app-router.html
+++ b/pages/web-components/app-router.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-app-router">
 
-    <psk-toc title="PSK - Application Router"></psk-toc>
+    <psk-toc title="PSK Application Router"></psk-toc>
 
     <psk-description>
         <p>This component is in charge with the routing of the application using a simple
