--- a/pages/web-components/container.html
+++ b/pages/web-components/container.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-container">
 
-    <psk-toc title="PSK Container - TOC">
+    <psk-toc title="PSK Container">
     </psk-toc>
 
     <psk-description>
