--- a/pages/web-components/icon.html
+++ b/pages/web-components/icon.html
@@ -1,13 +1,12 @@
 <psk-page title="psk-icon">
 
-    <psk-toc title="PSK - Icon"></psk-toc>
+    <psk-toc title="PSK Icon"></psk-toc>
 
     <psk-description>
         <p>This component will render an icon so the information passed along can be more expressive and the user
             experience is raised up another level.</p>
         <p>Since we did not created the icons we used the ones found in the font-awesome list of icons: <a
                 href="https://fontawesome.com/icons?d=gallery&m=free">Icons List</a></p>
-
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
