--- a/pages/web-components/page-not-found.html
+++ b/pages/web-components/page-not-found.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-page-not-found">
 
-    <psk-toc title="PSK - Page not Found - TOC"></psk-toc>
+    <psk-toc title="PSK Page not Found"></psk-toc>
 
     <psk-description>
         <p>This component is intended to be used inside a router component, so when the user navigates to an unknown
