--- a/pages/404.html
+++ b/pages/404.html
@@ -1,5 +1,3 @@
-<psk-page title="404">
-    <psk-chapter title="404 - Not found">
-        This page does not exist
-    </psk-chapter>
+<psk-page>
+    <psk-page-not-found></psk-page-not-found>
 </psk-page>
