--- a/pages/Cardinal/models.html
+++ b/pages/Cardinal/models.html
@@ -1,4 +1,5 @@
 <psk-page title="Observable Models">
+  <psk-toc title="Observable Models"></psk-toc>
   <psk-chapter title="makeObservable">
     <psk-code>
 
