--- a/pages/EDFS/cloud-safe-boxes.html
+++ b/pages/EDFS/cloud-safe-boxes.html
@@ -1,5 +1,5 @@
 <psk-page title="Cloud Safe Boxes">
-	<psk-toc></psk-toc>
+	<psk-toc title="Cloud Safe Boxes"></psk-toc>
 	
   <psk-chapter title="Abstract">
     <p align="justify">A CSB is a BAR containing a blockchain and optionally a folder with the code of a SSApp. Any CSB is associated to the code of a Blockchain Constitution. We mean by Constitution a collection of swarm definitions, assets and transactions. Any modification of the CSB embedded blockchain content must be operated only using the Constitution code.</p>
