--- a/pages/psk-wiki/psk-img.html
+++ b/pages/psk-wiki/psk-img.html
@@ -1,6 +1,6 @@
 <psk-page title="psk-img">
 
-    <psk-toc title="PSK Img - TOC">
+    <psk-toc title="PSK Img">
     </psk-toc>
 
     <psk-description>
