--- a/pages/Cardinal/themes.html
+++ b/pages/Cardinal/themes.html
@@ -27,8 +27,43 @@
     </psk-code>
   
   </psk-chapter>
+  <psk-chapter  title="Particularities in designing web components">
+    <p>
+      While designing web components an important thing to take into consideration is  the Shadow DOM. If the Shadow DOM of a web component is enabled, elements within the shadow root are scoped  and all the styles outside of the component do not apply. This means that we have to style the elements inside the Shadow Dom from within the component.
+    </p>
+    <p>
+      Normally, you could add your styles in the tag name of the component just like in the example below:
+    </p>
+    <psk-code>
+      my-element {
+        color: black;
+      }
+      my-element p {
+        color: blue;
+      }      
+    </psk-code>
+    <p>
+      With Shadow DOM, CSS selectors inside the component can be simplified and the parent component can be styled using the <code>:host</code> selector. Therefore the code above could be:
+    </p>
+    <psk-code>
+      :host {
+        color: black;
+      }
+      p {
+        color: blue;
+      }      
+    </psk-code>
+    <p>
+      The <code>:host</code> selector can be in handy, if you want to add style to elements based on the parent component attributes. For example, the app-menu component uses in its composition the psk-menu-item-renderer component. Using the app-menu attribute named <b>hamburger</b>, we can write in <b>psk-menu-item-renderer.css</b> file new css rules that can change the children elements of the app-menu component. In the example below, you can see how to change all the div elements width, if the attribute hamburger is set up to true:
+    </p>
+    <psk-code>
+      :host([hamburger]) div {
+        width: 300px;
+    }    
+    </psk-code>
+  </psk-chapter>
 
-  <psk-chapter  title="Customize web components">
+  <psk-chapter title="Customize web components">
     <p>
       As we said above in order to customize a web component we need to change the css file that has the same name as the component. Through css we can change the layout structure, color schemes, topography styles and others. Below you can find examples on how to customize different web components.
     </p>
@@ -59,6 +94,24 @@
         For customizing the <b>psk-code</b> component we can use <a href=”https://prismjs.com/”>PrismJS </a>. Prism is a lightweight, extensible syntax highlighter, built with modern web standards, that can help us generate all the css we need. We have the option of choosing between downloading the developer version or the minified one. Prism also offers us multiple themes for the code style of a lot of programming languages. By downloading the developer version you can easily modified the predefined theme to make it match your design.
       </p>
      </psk-chapter>
+     <psk-chapter title="psk-grid">
+      <p>
+        A major component for constructing the layout of any page is psk-grid. Depending on the number of columns specified in the columns attribute, the elements enumerated in the psk-grid tag, will be displayed on that number of columns.
+      </p>
+      <p>
+        This component renders the following html structure:
+      </p>
+      <psk-code>
+        <div class=row>
+          …
+          elements
+          …
+        </div>        
+      </psk-code>
+      <p>
+        Each element inside the psk-grid component, will have the <code>col-12</code> and <code>col-md-x</code> classes (x is equal to 12 divided by the number of columns we want to be displayed). Using those classes we can style the overall grid.
+      </p>
+     </psk-chapter>
     <psk-chapter title="psk-img">
       <p>
         Different designs might require different ways of displaying images. From the image size to the image description there are a lot of possibilities for customization. If we want to customize the  <b>psk-img</b> component we will have to change the css file with the same name.
@@ -76,7 +129,7 @@
         </div>        
       </psk-code>
       <p>
-        Based on the <b>image_container</b>, <b>image_wrapper</b>, <b>image_description</b> and <b>img-fluid</b> classes we can target specific elements of this component.
+        Based on the <code>image_container</code>, <code>image_wrapper</code>, <code>image_description</code> and <code>img-fluid</code> classes we can target specific elements of this component.
       </p>
     </psk-chapter>
     <psk-chapter title="psk-link">
@@ -84,13 +137,13 @@
         This component role is to create a link that will redirect the user on another page inside the website. In order to customize this component we have to take into account the html structure that is rendered.
       </p>
       <psk-code>
-        <div class=”psk-link”>
+        <div class=psk-link>
           <a class="btn btn-link"> 
           </a>
         </div>          
       </psk-code>
       <p>
-        Using the <b>psk-link</b>, <b>btn</b> and <b>btn-link</b> classes, we can style this component as any other link or we can style it totally different.
+        Using the <code>psk-link</code>, <code>btn</code> and <code>btn-link</code> classes, we can style this component as any other link or we can style it totally different.
       </p>
     </psk-chapter>
     <psk-chapter title="psk-list">
@@ -155,4 +208,5 @@
     </psk-chapter>
     
   </psk-chapter>
+  
 </psk-page>
