--- a/pages/psk-wiki/psk-img.html
+++ b/pages/psk-wiki/psk-img.html
@@ -20,11 +20,11 @@
 
     <psk-chapter title="Code Example">
         <psk-code>
-            <psk-img title="PSK-img Example" src="/pages/PrivateSky/EDFS.png">
+            <psk-img title="PSK-img Example" src="/assets/images/newlook/EDFS.png">
             </psk-img>
         </psk-code>
         <psk-example title="Psk-img Example">
-            <psk-img title="PSK-img Example" src="/pages/PrivateSky/EDFS.png">
+            <psk-img title="PSK-img Example" src="/assets/images/newlook/EDFS.png">
             </psk-img>
         </psk-example>
 
