--- a/pages/Development/annotation-engine.html
+++ b/pages/Development/annotation-engine.html
@@ -41,8 +41,8 @@
   <psk-chapter title="Syntax of Annotations">
   	<p align="justify">We will use the EBNF (Extended Backus-Naur Form) to describe the specific syntax of the new annotation mechanisms achieved through research in collaboration with the DPO.</p>
 
-  <psk-img title="Swarm variable syntax definition" src="/assets/images/developnent/SwarmVariableSyntax.PNG"></psk-img>
-  <psk-img title="Annotations syntax definition" src="/assets/images/developnent/Annotations.PNG"></psk-img>
+  <psk-img title="Swarm variable syntax definition" src="/assets/images/newlook/SwarmVariableSyntax.svg"></psk-img>
+  <psk-img title="Annotations syntax definition" src="/assets/images/newlook/Annotations.svg"></psk-img>
 
 </psk-chapter>
 
