Added coding style page

--- a/pages/Development/coding-style.html
+++ b/pages/Development/coding-style.html
@@ -1,5 +1,13 @@
-<psk-page title="Page not available yet">
-  <psk-chapter title="Not available">
-    Page still not available. Wait until our team will complete this! If you believe that this is an error or you want to contribute, write an email to sinica@axiologic.net
+<psk-page title="Coding style">
+  <psk-toc title="Codin style - Table of Contents"></psk-toc>
+
+  <psk-chapter title="Guidelines">
+    <div>
+      <p>Every module that uses constants should have a file named constants.js in its root. There are two primary ways of exposing constants:</p>
+      <ol>
+        <li>If the module exposes a single class, it is preferred that the constants will be found on the prototype of this class</li>
+        <li>Otherwise, the module should expose a property "constants" containing the object exported by the file constants.js</li>
+      </ol>
+    </div>
   </psk-chapter>
 </psk-page>
