--- a/pages/psk-wiki/psk-chapter.html
+++ b/pages/psk-wiki/psk-chapter.html
@@ -7,7 +7,7 @@
         <span>This component is creating another <psk-link page="psk-wiki/psk-card">psk-card</psk-link> in which he uses
             the <code>title </code> as the card header title.</span>
         <p>This component creates a guid(a 32 characters string in a <b>xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx</b>
-            format) that will pe passed along</p>
+            format) that will pe passed along.</p>
         <p>Every time a chapter is created the event is triggered and an children components
             hierarchy is created(or updated if it was already created).</p>
         <span>All info sent by the <code> sendChapter</code> event will be passed to the <psk-link
